# witeka

./: .env  .git-pre-push.sh  .gitignore  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  Settings.toml  build_wasm_client.sh
db/: create_db.sql  create_test_db.sql
server/: Cargo.toml
server/src/: dao.rs  main.rs  settings.rs
server/src/core/model/: user.rs
server/src/core/service/: user.rs
server/src/dao/: user.rs
server/src/dao/dto/: user.rs
server/src/http/: dto.rs
server/src/http/api/: v1.rs
static/: index.html  main.css
wasm_client/: Cargo.toml
wasm_client/src/: component.rs  dto.rs  lib.rs  main.rs  service.rs  utils.rs  widget.rs
wasm_client/src/component/: root.rs
wasm_client/src/dto/: user.rs
wasm_client/src/widget/: table.rs
