[package]
name = "witeka-server"
version = "0.1.0"
authors = ["Noogen Team <info.noogen@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/noogen-projects/witeka"
description = "The Witeka web application"
keywords = ["noogen"]
categories = []

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.1"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
serde = { version = "1.0.110", features = ["derive"] }
config = "0.10.1"
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
serde_json = "1.0.48"