[package]
name = "witeka-wasm-client"
version = "0.1.0"
authors = ["Noogen Team <info.noogen@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/noogen-projects/{{project-name}}"
description = "A Rust web application ..."
keywords = ["noogen"]
categories = []

[dependencies]
yew = { version = "0.16.2", features = ["web_sys"] }
gloo = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["History", "Window", "Document"] }
lew = { git = "https://github.com/noogen-projects/lew.git" }
